Fix overlapping text in game over screen

--- a/less/main.less
+++ b/less/main.less
@@ -5,6 +5,15 @@
   box-sizing: border-box;
 }
 
+h1, h2, h3 {
+  margin-top: 21px;
+  margin-bottom: 10.5px;
+}
+
+h2 {
+  font-size: 25px;
+}
+
 a, .btn {
   transition: all 0.25s ease-in-out;
 }
